proof reading nearly done

--- a/intention motor representation with corrado sinigaglia/intention and motor action.ppr.corrected.tex
+++ b/intention motor representation with corrado sinigaglia/intention and motor action.ppr.corrected.tex
@@ -60,9 +60,18 @@ Our overall aim is to show that intention and motor representation play distinct
 
 Surrendering to this temptation might be reasonable if all motor representations represented only kinematic or dynamic features of actions, such as mere joint displacements or muscle contractions. However, we shall argue in this section that some motor representations represent action outcomes such as grasping, tearing or throwing. Furthermore, as we shall go on to argue (also in this section), such representations ground purposive actions. This in outline is why the first temptation should be resisted.
 
-How does representing an outcome differ from representing merely kinematic or dynamic features of action? How, for instance, does a motor representation of grasping (assuming for now that such a thing exists) differ from a representation of a sequence of joint displacements? First, a motor representation of grasping captures something common to many different sequences of joint displacements and postures involving a variety of effectors. To illustrate, an agent might grasp an object with her hand, with her mouth, with normal pliers (where grasping requires closing the hand), or with reverse pliers (where grasping requires opening the hand). A motor representation of grasping identifies something common to all these cases. Second, and conversely, a motor representation of grasping potentially distinguishes between the same sequence of joint displacements in different contexts. For instance, how a grasping action is represented may depend on a relatively distal outcome: on whether (say) it results in the object grasped being eaten or placed. Also the joint displacements which realise grasping in one context might in another context realise a different action, such as scratching; or they might fail to realise any action at all (because there is no target object, say). Third, a motor representation of an action outcome locates the action within a hierarchical structure. To illustrate, a left-handed precision grip and a right-handed whole hand grip are different action outcomes and both instances of grasping.\footnote{On the notion of action outcome in motor representation, see \citet{gallese:2000_inner}, \citet{jeannerod_motor_2006} and \citet{rizzolatti_mirrors_2008}.}  
+How does representing an outcome differ from representing merely kinematic or dynamic features of action? 
+How, for instance, does a motor representation of grasping (assuming for now that such a thing exists) differ from a representation of a sequence of joint displacements? 
+First, a motor representation of grasping captures something common to many different sequences of joint displacements and postures involving a variety of effectors. 
+To illustrate, an agent might grasp an object with her hand, with her mouth, with normal pliers (where grasping requires closing the hand), or with reverse pliers (where grasping requires opening the hand). 
+A motor representation of grasping identifies something common to all these cases. 
+Second, and conversely, a motor representation of grasping potentially distinguishes between the same sequence of joint displacements in different contexts. 
+For instance, how a grasping action is represented may depend on a relatively distal outcome: on whether (say) it results in the object grasped being eaten or placed. In addition, the joint displacements which realise grasping in one context might in another context realise a different action, such as scratching; or they might fail to realise any action at all (because there is no target object, say). Third, a motor representation of an action outcome locates the action within a hierarchical structure. To illustrate, a left-handed precision grip and a right-handed whole hand grip are different action outcomes and both instances of grasping.%
+\footnote{On the notion of action outcome in motor representation, see \citet{gallese:2000_inner}, \citet{jeannerod_motor_2006} and \citet{rizzolatti_mirrors_2008}.}  
 
-Why accept that there are motor representations of action outcomes? The first step is to consider evidence that motor processes carry information about action outcomes. For any given marker of motor processing (such as a pattern of neuronal discharge or motor-evoked potentials), how can we test whether that marker carries information about action outcomes? The basic principle is straightforward: vary kinematic and dynamic features while holding constant an action outcome; and, conversely, vary action outcomes while holding kinematic and dynamic features constant. In practice researchers have devised many ingenious ways to achieve this. In order to vary kinematic and dynamic features while holding action outcomes constant, in some studies a single action outcome is achieved using different effectors, hand, mouth or foot, say \citep{rizzolatti:1988_functional,Rizzolatti:2001ug,cattaneo:2010_state-dependent}. A variation on this approach is to contrast performing a grasping action with different tools, so that the same action outcome might require closing or opening the hand depending on the tool used \citep{umilta:2008pliers,cattaneo:2009_representation,rochat:2010_responses}. In order to vary action outcome while holding kinematic and dynamic features constant, researchers have contrasted grasping movements with different distal outcomes such as eating and placing \citep{Fogassi:2005nf,bonini:2010_ventral,cattaneo:2007_impairment}. Another approach is to contrast the same grasping movements performed in the presence or manifest absence of a target object \citep{Umilta:2001zr,villiger:2010_activity}. A related alternative is to contrast the same grasping movements in the presence of objects which could, or manifestly could not, be grasped by means of such movements \citep{koch:2010_resonance}. In each of these cases there is evidence that some markers of motor processing are correlated with action outcomes rather than narrowly kinematic or dynamic features of action.\footnote{ Of course some researchers have raised doubts concerning some of the evidence that there are markers of motor processing which carry information about action outcomes (e.g.\ \citealp{cavallo_grasping_2011,borroni_mirroring_2011}).  On balance, however, the evidence supports this conclusion.}
+Why accept that there are motor representations of action outcomes? The first step is to consider evidence that motor processes carry information about action outcomes. For any given marker of motor processing (such as a pattern of neuronal discharge or motor-evoked potentials), how can we test whether that marker carries information about action outcomes? The basic principle is straightforward: vary kinematic and dynamic features while holding constant an action outcome; and, conversely, vary action outcomes while holding kinematic and dynamic features constant. In practice researchers have devised many ingenious ways to achieve this. In order to vary kinematic and dynamic features while holding action outcomes constant, in some studies a single action outcome is achieved using different effectors, hand, mouth or foot, say \citep{rizzolatti:1988_functional,Rizzolatti:2001ug,cattaneo:2010_state-dependent}. A variation on this approach is to contrast performing a grasping action with different tools, so that the same action outcome might require closing or opening the hand depending on the tool used \citep{umilta:2008pliers,cattaneo:2009_representation,rochat:2010_responses}. In order to vary action outcome while holding kinematic and dynamic features constant, researchers have contrasted grasping movements with different distal outcomes such as eating and placing \citep{Fogassi:2005nf,bonini:2010_ventral,cattaneo:2007_impairment}. Another approach is to contrast the same grasping movements performed in the presence or manifest absence of a target object \citep{Umilta:2001zr,villiger:2010_activity}. A related alternative is to contrast the same grasping movements in the presence of objects which could, or manifestly could not, be grasped by means of such movements \citep{koch:2010_resonance}. 
+In each of these cases there is evidence that some markers of motor processing are correlated with action outcomes rather than narrowly kinematic or dynamic features of action.%
+\footnote{ Of course some researchers have raised doubts concerning some of the evidence for the claim that there are markers of motor processing which carry information about action outcomes (e.g.\ \citealp{cavallo_grasping_2011,borroni_mirroring_2011}).  On balance, however, the evidence supports this conclusion.}
 
 To say that motor processing involves information about action outcomes is not, of course, to say that there are motor representations of action outcomes.  To make the step from information to representation we have to show that information about action outcomes guides processing \citep[compare][]{Dretske:1988sq}. To this end we shall now consider how information about action outcomes is relevant in motor planning and monitoring, which are two of the functional roles of motor representation.  
 
@@ -72,7 +81,9 @@ Second, motor representations function in monitoring action. They provide inputs
 
 These facts about the functional roles of motor representation in planning and monitoring action reveal that it would be advantageous for some such representations to represent action outcomes rather than merely patterns of joint displacement or muscle activation. In the case of planning, many of the requirements to be satisfied are partially dependent on action outcomes and not only on more narrowly kinematic or dynamic features of action. Representation of action outcomes could therefore play a role in simplifying planning processes.  Equally, monitoring involves predicting relatively distal effects of bodily movements including facts about the locations of objects. To make such predictions exclusively in terms of individual joint displacements or muscle activations would be computationally demanding as the human hand alone has over 20 degrees of freedom. Efficient prediction plausibly demands several higher-level representations of action including representations of action outcomes \citep{arbib:1985_coordinated,mason:2001_hand,santello:2002_patterns}. In short, it is clear that motor representations of action outcomes could be useful: in planning, because some requirements for efficient motor planning concern outcomes to which actions are directed; and in monitoring, because representations of outcomes could simplify prediction. Given that, as we saw, markers of motor processes carry information about action outcomes, it is reasonable to conclude from the relevance of action outcomes to the functional roles of motor representation that some motor representations are representations of action outcomes.
 
-So far we have argued that motor processes involve representations of action outcomes. It remains to show that such representations ground purposive actions. But this is hardly a further step. How do intentions ground the purposiveness of actions?  On any standard view, an intention represents an outcome, causes an action, and does so in a way that would normally facilitate the outcome's occurrence. Similarly, motor representations of outcomes represent action outcomes, play a role in generating actions, and do this in a way that normally facilitates the occurrence of the outcomes represented. To say that motor representations do all this is one way of making precise the metaphor involved in saying that purposive actions are directed to outcomes.  Moreover, there is a clear resemblance between the natural way of understanding intentions as grounding outcome-directedness and the way in which motor representations ground outcome-directedness (as \citealp{pacherie:2008_action}, pp.\ 189-90 has also argued).  So given the functional roles and representational objects of motor representations, there is little room for doubt that motor representations can ground the outcome-directedness of purposive actions.
+So far we have argued that motor processes involve representations of action outcomes. It remains to show that such representations ground purposive actions. But this is hardly a further step. How do intentions ground the purposiveness of actions?  On any standard view, an intention represents an outcome, causes an action, and does so in a way that would normally facilitate the outcome's occurrence. Similarly, motor representations of outcomes represent action outcomes, play a role in generating actions, and do this in a way that normally facilitates the occurrence of the outcomes represented. To say that motor representations do all this is one way of making precise the metaphor involved in saying that purposive actions are directed to outcomes.  
+Moreover, there is a clear resemblance between the natural way of understanding intentions as grounding outcome-directedness and the way in which motor representations ground outcome-directedness (as \citealp{pacherie:2008_action}, pp.\ 189-90 has also argued).  
+So given the functional roles and contents of motor representations, there is little room for doubt that motor representations can ground the outcome-directedness of purposive actions.
 
 To sum up, the first temptation was to suppose that motor representation has no bearing at all on our question about the relation between actions and the outcomes to which they are directed. One reason to resist this temptation is the fact that, as we have just argued, motor representations not only represent action outcomes but also ground the directedness of actions to outcomes.  This argument might be taken as grounds for giving in to a second temptation.
 
@@ -81,8 +92,12 @@ To sum up, the first temptation was to suppose that motor representation has no 
 \section{A motor format for representation}
 The second temptation is to suppose that motor representation, or some species of it, is a variety of intention, where intention is understood in the standard way as a propositional attitude with a characteristic role in practical reasoning \citep{Bratman:1987xw}. In this section we explain why this temptation should also be resisted.
 
-As background we first need a generic distinction between content and format. Imagine you are in an unfamiliar city and are trying to get to the central station. A stranger offers you two routes. Each route could be represented by a distinct line on a paper map. The difference between the two lines is a difference in content. Each of the routes could alternatively have been represented by a distinct series of instructions written on the same piece of paper; these cartographic and propositional representations differ in format.%
-\footnote{Note that the distinction between content and format is orthogonal to issues about representational medium. The maps in our illustration may be paper map or electronic maps, and the instructions may be spoken, signed or written. This difference is one of medium.
+As background we first need a generic distinction between content and format. Imagine you are in an unfamiliar city and are trying to get to the central station. 
+A stranger offers you two routes. 
+Each route could be represented by a distinct line on a paper map. 
+The difference between the two lines is a difference in content. Each of the routes could alternatively have been represented by a distinct series of instructions written on the same piece of paper; these cartographic and propositional representations differ in format.%
+\footnote{Note that the distinction between content and format is orthogonal to issues about representational medium. 
+The maps in our illustration may be paper map or electronic maps, and the instructions may be spoken, signed or written. This difference is one of medium.
 } 
 The format of a representation constrains its possible contents. For example, a representation with a cartographic format cannot represent what is represented by sentences such as `There could not be a mountain whose summit is inaccessible.'  The distinction between content and format is necessary because, as our illustration shows, each can be varied independently of the other.
 
@@ -96,13 +111,17 @@ To illustrate, compare imagining seeing an object moving with actually seeing it
 It is this way of imagining seeing an object move that we wish to compare with actually seeing an object move.  These two have similarities in characteristic performance profile.  For instance, whether an object can be seen all at once depends on its size and distance from the perceiver; strikingly, when subjects imagine seeing an object, whether they can imagine seeing it all at once depends in the same way on size and distance (\citealp{kosslyn:1978_measuring}; \citealp[p.\ 99ff]{kosslyn:1994_image}).  Also, how long it takes to imagine looking over an object depends on the object's subjective size in the same way that how long it would take to actually look over that object would depend on its subjective size \citep{kosslyn:1978_visual}.%
 \footnote{These and further examples are discussed by \citet[p.\ 165]{currie:1997_mental}.
 } 
-Further, imagining seeing something (for example, imagining seeing a visual mask) can modulate and interfere with actually seeing in much the way that actually seeing the thing imagined would \citep{pearson:2008_functional, ishai:1995_common}. The similarities in characteristic performance profile and the particular patterns of interference are good (if non-decisive) reasons to conjecture that imagining seeing and actually seeing involve representations with a common format. This conjecture is indirectly supported by evidence that imagining seeing and actually seeing not only have a common neural basis but also involve similar patterns of cortical activation \citep[e.g.][]{page:2011_erp}.
+Further, imagining seeing something (for example, imagining seeing a visual mask) can modulate and interfere with actually seeing in much the way that actually seeing the thing imagined would \citep{pearson:2008_functional, ishai:1995_common}. 
+The similarities in characteristic performance profile and the particular patterns of interference are good (if non-decisive) reasons to conjecture that imagining seeing and actually seeing involve representations with a common format. 
+This conjecture is indirectly supported by evidence that imagining seeing and actually seeing not only have a common neural basis but also involve similar patterns of cortical activation \citep[e.g.][]{page:2011_erp}.
 
-Let us turn to motor representation. Compare imagining moving a ball with actually moving a ball.  To fully specify the comparison we intend, it is again necessary to distinguish two ways of imagining. One way of imagining action is phenomenologically something like acting except that such imaginings are not necessarily responsive to the features of actual objects and do not necessarily result in bodily movements. To illustrate suppose you are about to dive into a pool and, standing at the edge, mentally pantomime launching yourself from the bank. In some respects the experiences involved in this imaginative exercise may be barely distinguishable from experiences that might be involved in actually launching yourself into the pool. This way of imagining action can be distinguished from cognitive ways of imagining action which might involve thinking about an action.%
+Let us turn to motor representation. 
+Compare imagining moving a ball with actually moving a ball.  
+To fully specify the comparison we intend, it is again necessary to distinguish two ways of imagining. One way of imagining action is phenomenologically something like acting except that such imaginings are not necessarily responsive to the features of actual objects and do not necessarily result in bodily movements. To illustrate suppose you are about to dive into a pool and, standing at the edge, mentally pantomime launching yourself from the bank. In some respects the experiences involved in this imaginative exercise may be barely distinguishable from experiences that might be involved in actually launching yourself into the pool. This way of imagining action can be distinguished from cognitive ways of imagining action which might involve thinking about an action.%
 \footnote{
 On distinguishing these two ways of imagining action, see \citet[p.\ 161]{currie:1997_mental}, \citet[p.\ 727]{jeannerod:1995_mental}, and \citet[p.\ 638-9]{kosslyn:2001_neural}. The former, phenomenologically action-like imagining is sometimes labelled `motor' or `internal' and occasionally identified by its links to motor processes or by features of the format or content of the representations involved (\citealp[p.\ 1400]{annett:1995_motor}). We avoid these labels because we introduce the distinction by appeal to phenomenology only and do not stipulate that motor representations are involved. It is essential for what follows that the involvement of motor representations in the phenomenologically action-like way of imagining action is a discovery rather than a stipulation.
 }
-The comparison we intend is between imagining moving a ball in the former, phenomenologically action-like way and actually moving a ball. There is evidence that the way imagining performing an action unfolds in time is similar in some respects to the way actually performing an action of the same type would unfold.  For instance, how long it takes to imagine moving an object is closely related to how long it would take to actually move that object \citep{decety:1989_timing, decety:1996_imagined, Jeannerod:1994oz}. In addition, for actions such as grasping the handle of a cup, manipulating the target object in ways that make the action harder (such as orienting the cup's handle to make it less convenient for you to grasp) make a corresponding difference to the effort involved in imagining performing the action \citep{parsons:1994_temporal, frak:2001_orientation}. Further, imagining performing an action can selectively interfere with performance of a related action. For example, suppose you are faced with an array of objects one of which---the target---you will shortly be required to grasp.  Subjects who imagine grasping an object other than the target object tend to be slo wer in subsequently grasping the target object than subjects who do not imagine acting or subjects who imagine grasping the target object \citep{ramsey:2010_incongruent_}. Just as the similarities between imagining seeing and actually seeing are evidence for the hypothesis that the representations involved in imagining seeing and actually seeing have a common format, so also the similarities in characteristic performance profile between imagining acting and actually acting, together with the particular patterns of interference between the two, suggest that imagining acting and actually acting involve a common representational format. And much as in the case of seeing and imagining seeing, acting and imagining acting involve many of the same processes almost up to the actual muscle contractions \citep{jeannerod:1995_mental, jeannerod:2003_mechanism}.
+The comparison we intend is between imagining moving a ball in the former, phenomenologically action-like way and actually moving a ball. There is evidence that the way imagining performing an action unfolds in time is similar in some respects to the way actually performing an action of the same type would unfold.  For instance, how long it takes to imagine moving an object is closely related to how long it would take to actually move that object \citep{decety:1989_timing, decety:1996_imagined, Jeannerod:1994oz}. In addition, for actions such as grasping the handle of a cup, manipulating the target object in ways that make the action harder (such as orienting the cup's handle to make it less convenient for you to grasp) make a corresponding difference to the effort involved in imagining performing the action \citep{parsons:1994_temporal, frak:2001_orientation}. Further, imagining performing an action can selectively interfere with performance of a related action. For example, suppose you are faced with an array of objects one of which---the target---you will shortly be required to grasp.  Subjects who imagine grasping an object other than the target object tend to be slower in subsequently grasping the target object than subjects who do not imagine acting or subjects who imagine grasping the target object \citep{ramsey:2010_incongruent_}. Just as the similarities between imagining seeing and actually seeing are evidence for the hypothesis that the representations involved in imagining seeing and actually seeing have a common format, so also the similarities in characteristic performance profile between imagining acting and actually acting, together with the particular patterns of interference between the two, suggest that imagining acting and actually acting involve a common representational format. And much as in the case of seeing and imagining seeing, acting and imagining acting involve many of the same processes almost up to the actual muscle contractions \citep{jeannerod:1995_mental, jeannerod:2003_mechanism}.
 
 We have been comparing actually seeing with imagining seeing and actually acting with imagining acting as a first step towards arguing that visual and motor representations differ in format (which in turn will be background for an argument that motor representation and intention differ in format).  This claim could not easily be established by comparing actually seeing with actually acting because performance differences between these might be explained by bodily or environmental factors only distantly related to the representations involved. By contrast, comparing performance in imagining seeing and imagining acting does provide reasons to conclude that visual and motor representations differ in format. To see why, contrast imagining rotating a ball with imagining seeing a ball rotating.%
 \footnote{Imagining acting without also imagining seeing may be difficult in practice, and conversely; it may also sometimes be difficult to distinguish imagining acting from imagining seeing \citep[as][p.\ 170 suggest]{currie:1997_mental}. However ordinary subjects can separate the two well enough to confirm predictions about their differences \citep[see, e.g.,][]{kosslyn:2001_imagining}.
@@ -161,9 +180,15 @@ Consider the possibility that some action concepts are demonstrative. Someone wh
 
 How could the existence of demonstrative concepts for actions be relevant  to solving the interface problem? In our earlier illustration, the instruction `follow this route!' succeeds in referring to a route by deferring to another representation with a different format. The instruction is about a route not a representation, but it succeeds in referring to a route by deferring to a representation of that route. Similarly, some demonstrative concepts may refer to types of action such as grasping or throwing by deferring to motor representations (see \citet{levine:2010_demonstrative} for one way of developing this idea). These demonstrative concepts would be concepts of actions not of motor representations, but they would succeed in being concepts of actions by deferring to motor representations. For any such concept, it is a motor representation which ultimately determines what it is a concept of.
 
-The idea that some demonstrative concepts refer to actions by deferring to motor representations immediately raises a question. Could a demonstrative concept really defer to a motor representation? It seems clear that we can't select a motor representation to defer to in the same way that we can select a map when we say `Follow this route!'. After all, motor representations are not things we can point to with our hands. Nevertheless, it does seem that motor representations are available in some sense. To start with an analogy, consider pantomiming an action to yourself. You are rehearsing part of an operation which involves precisely grasping a delicate structure with some tweezers. Just as someone might point to a map and say `Follow that route!', so also they could point to your pantomime and say `Do that!'. In our analogy, the pantomime stands in for a motor representation of the action.  The demonstrative in `Do that!' refers to an action by deferring to the pantomime. Of course this analogy doesn't show that demonstrative concepts can defer to motor representations (at least not unless pantomimes are motor representations of actions). But now consider purely mental pantomime---that is, phenomenologically action-like imagination. One might use this kind of imagination to explore different ways of completing a task and then, having hit on a good solution, think to oneself `Do that!' It seems possible that in some such cases the demonstrative refers by deferring to a motor representation of action involved in imagining acting.
+The idea that some demonstrative concepts refer to actions by deferring to motor representations immediately raises a question. Could a demonstrative concept really defer to a motor representation? It seems clear that we can't select a motor representation to defer to in the same way that we can select a map when we say `Follow this route!'. After all, motor representations are not things we can point to with our hands. Nevertheless, it does seem that motor representations are available in some sense. To start with an analogy, consider pantomiming an action to yourself. You are rehearsing part of an operation which involves precisely grasping a delicate structure with some tweezers. Just as someone might point to a map and say `Follow that route!', so also they could point to your pantomime and say `Do that!'. In our analogy, the pantomime stands in for a motor representation of the action.  The demonstrative in `Do that!' refers to an action by deferring to the pantomime. Of course this analogy doesn't show that demonstrative concepts can defer to motor representations (at least not unless pantomimes are motor representations of actions). But now consider purely mental pantomime---that is, phenomenologically action-like imagination. 
+One might use this kind of imagination to explore different ways of completing a task and then, having hit on a good solution, think to oneself `Do that!'. 
+It seems possible that in some such cases the demonstrative refers by deferring to a motor representation of action involved in imagining acting.
 
-But is this really possible? Someone might object that in appealing to imagining acting we are sneaking intentions in through the back door. How can we be sure that it is ever really a motor representation rather than an intention that one defers to in thinking `Do that!'?  Contrast two cases of phenomenologically action-like imagination, both involving a tool. In the first case, imagine grasping an object with the tool; and in the second case, imagine releasing the same object with the tool. The two cases are different but in what does their difference consist? Could it be a difference in intention that explains how they differ?  Since it is possible to grasp without intending to grasp, it is surely also possible to imagine grasping without imagining intending to grasping.  And note that to imagine grasping without imagining intending to grasping does not necessarily require one to imagine non-intentionally grasping. (It is easy to miss this point by confusing it with the issue of whether the imagining must itself be intentional. Whether or not it is possible to imagine grasping or releasing without intending to imagine so acting, one can certainly imagine grasping or releasing without  imagining intending to so act.) So to rule out the possibility that the two imaginings differ with respect to intention, let both be neutral with respect to intention. Is the difference between the two cases then due to differing movements or patterns of muscle contraction? To rule this possibility out, let the movements and muscle contractions involved in both cases be as similar as possible: let the difference between grasping and releasing the object be a matter of how the tool is configured rather than of how your body moves. With the contrast cases elaborated by these two stipulations, it is plausible that the difference between the two imaginings will be due to the different motor representations involved in grasping and releasing. So in these cases, the thought `Do that!' will refer to grasping (or releasing) by deferring to a motor representation of grasping (or of releasing). It follows that demonstrative concepts can refer to actions by deferring to motor representations.
+But is this really possible? Someone might object that in appealing to imagining acting we are sneaking intentions in through the back door. How can we be sure that it is ever really a motor representation rather than an intention that one defers to in thinking `Do that!'?  Contrast two cases of phenomenologically action-like imagination, both involving a tool. In the first case, imagine grasping an object with the tool; and in the second case, imagine releasing the same object with the tool. The two cases are different but in what does their difference consist? 
+Could it be a difference in intention that explains how they differ?  
+Since it is possible to grasp without intending to grasp, it is surely also possible to imagine grasping without imagining intending to grasp. 
+And note that to imagine grasping without imagining intending to grasp does not necessarily require one to imagine non-intentionally grasping. 
+(It is easy to miss this point by confusing it with the issue of whether the imagining must itself be intentional. Whether or not it is possible to imagine grasping or releasing without intending to imagine so acting, one can certainly imagine grasping or releasing without  imagining intending to so act.) So to rule out the possibility that the two imaginings differ with respect to intention, let both be neutral with respect to intention. Is the difference between the two cases then due to differing movements or patterns of muscle contraction? To rule this possibility out, let the movements and muscle contractions involved in both cases be as similar as possible: let the difference between grasping and releasing the object be a matter of how the tool is configured rather than of how your body moves. With the contrast cases elaborated by these two stipulations, it is plausible that the difference between the two imaginings will be due to the different motor representations involved in grasping and releasing. So in these cases, the thought `Do that!' will refer to grasping (or releasing) by deferring to a motor representation of grasping (or of releasing). It follows that demonstrative concepts can refer to actions by deferring to motor representations.
 
 So far we have focused on imagining acting. We are not committed to claiming that demonstrative concepts can only refer to actions by deferring to motor representations involved in imagination. Given the parallels between the phenomenologically action-like kind of imagination and actually acting already discussed, it is plausible that demonstrative reference to action by deference to motor representation is made possible not just by experiences associated with imagining acting but also by experiences associated with actually acting.
 
@@ -180,7 +205,10 @@ In fact, there may be another way of explaining non-accidental matching with res
 At this point we should acknowledge a complication.  Above we argued that experience is needed for the acquisition of demonstrative concepts of ways of acting but not for their continued use in practical reasoning.  This matters because forming an intention does not always involve newly experiencing a way of acting. However, things are more complicated concerning what to act on. Where an action involves particular things to be acted on, agents will not generally have past experiences of these.  Accordingly, demonstrative reference by deference to motor representation requires that some motor representations of particular targets for action are associated with experiences of those targets.  When we spontaneously intend to act on an object of which we have no previous experience (and perhaps in other cases too), our experience of that object would have to depend in part on motor representations of it.  There is indeed some evidence for the ubiquity of motor aspects of experience (and also evidence that motor representation does not always modulate how objects are experienced, but that is not relevant here).  For example, temporarily changing subjects' motor abilities by artificially extending their reach systematically affects their judgements of how far away objects are \citep{linkenauger:2009_effects, costantini2011tool}. Given that such judgements are based on experience,\footnote{
 It may be objected that these judgements could reflect non-experiential expectations; \citet[pp.\ 203-4]{witt:2011_action} reviews evidence against this possibility.
 } 
-this illustrates one way in which experience may be shaped in part by motor representation of objects.  There is also evidence that experiential judgements of size can be influenced by ability \citep[e.g.][]{witt2009kicking}.  It is plausible, then, that motor representation of objects modulates experiences of them.  This indicates that it is possible to refer not only to ways of acting by also to what to act on by deferring to motor representations.
+this illustrates one way in which experience may be shaped in part by motor representation of objects.  
+There is also evidence that experiential judgements of size can be influenced by ability \citep[e.g.][]{witt2009kicking}.  
+It is plausible, then, that some motor representations of objects  modulate experiences of them.  
+This indicates that it is possible to refer not only to ways of acting by also to what to act on by deferring to motor representations.
 
 Solving the interface problem may not always involve demonstrative concepts. What matters for solving the interface problem is deference, not demonstration. Suppose that someone acts on an intention to grasp the handle of a mug.  Suppose also that the outcome to which her action is directed, grasping the mug's handle, is specified by motor representations. As long as the concept of grasp involved in her intention refers by deferring to a motor representation of grasping, the two specifications of action outcomes (in intention and in motor representation) will not be independent and so the interface problem will be solved.
 
